--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,36 @@
 aiofiles==23.1.0
+alembic==1.10.2
+bcrypt==4.0.1
 certifi==2022.12.7
 cloudinary==1.32.0
 decouple==0.0.7
+dnspython==2.3.0
+ecdsa==0.18.0
+email-validator==1.3.1
+greenlet==2.0.2
 html5tagger==1.3.0
 httptools==0.5.0
+idna==3.4
+Mako==1.2.4
+MarkupSafe==2.1.2
 multidict==6.0.4
+Pillow==9.5.0
 psycopg2==2.9.6
+pyasn1==0.4.8
+pydantic==1.10.7
+PyMySQL==1.0.3
+python-dotenv==1.0.0
+python-jose==3.3.0
+PyYAML==6.0
+rsa==4.9
 sanic==23.3.0
+sanic-ext==23.3.0
+sanic-pydantic==1.3.1
 sanic-routing==22.8.0
 six==1.16.0
+SQLAlchemy==2.0.8
 tracerite==1.1.0
+typing_extensions==4.5.0
 ujson==5.7.0
 urllib3==1.26.15
 uvloop==0.17.0
