--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiofiles==23.1.0
+aiosmtplib==2.0.1
 alembic==1.10.2
 bcrypt==4.0.1
 certifi==2022.12.7
@@ -11,9 +12,11 @@ greenlet==2.0.2
 html5tagger==1.3.0
 httptools==0.5.0
 idna==3.4
+Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 multidict==6.0.4
+passlib==1.7.4
 Pillow==9.5.0
 psycopg2==2.9.6
 pyasn1==0.4.8
@@ -25,6 +28,8 @@ PyYAML==6.0
 rsa==4.9
 sanic==23.3.0
 sanic-ext==23.3.0
+sanic-jinja2==2022.11.11
+sanic-mail==0.0.3
 sanic-pydantic==1.3.1
 sanic-routing==22.8.0
 six==1.16.0
