--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,7 @@ POSTGRES_PASSWORD=
 POSTGRES_SERVER=
 POSTGRES_PORT=
 POSTGRES_DB=
-MAIL_SENDER=
+MAIL_SENDER_EMAIL=
 MAIL_SENDER_PASSWORD=
-MAIL_SEND_HOST=
-MAIL_SEND_PORT=
-MAIL_TLS=
-MAIL_START_TLS=
+MAIL_SENDER_HOST=
+MAIL_SENDER_PORT=
