--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ MAIL_SENDER_PASSWORD=
 MAIL_SENDER_HOST=
 MAIL_SENDER_PORT=
 CORS_ALLOWED_ORIGINS=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
