--- a/requirements.txt
+++ b/requirements.txt
@@ -25,13 +25,13 @@ PyMySQL==1.0.3
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-slugify==8.0.1
+pytz==2023.3
 PyYAML==6.0
 rsa==4.9
 sanic==23.3.0
 sanic-ext==23.3.0
 sanic-jinja2==2022.11.11
 sanic-openapi==21.12.0
-sanic-pydantic==1.3.1
 sanic-routing==22.8.0
 six==1.16.0
 SQLAlchemy==2.0.8
