--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==23.1.0
 aiosmtplib==2.0.1
 alembic==1.10.2
+anyio==3.6.2
 bcrypt==4.0.1
 certifi==2022.12.7
 cloudinary==1.32.0
@@ -9,31 +10,43 @@ dnspython==2.3.0
 ecdsa==0.18.0
 email-validator==1.3.1
 greenlet==2.0.2
+h11==0.14.0
 html5tagger==1.3.0
+httpcore==0.16.3
 httptools==0.5.0
+httpx==0.23.3
 idna==3.4
+iniconfig==2.0.0
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 multidict==6.0.4
+packaging==23.1
 passlib==1.7.4
 Pillow==9.5.0
+pluggy==1.0.0
 psycopg2==2.9.6
 pyasn1==0.4.8
 pydantic==1.10.7
 PyMySQL==1.0.3
+pytest==7.3.1
+pytest-mock==3.10.0
+python-decouple==3.8
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-slugify==8.0.1
 pytz==2023.3
 PyYAML==6.0
+rfc3986==1.5.0
 rsa==4.9
 sanic==23.3.0
 sanic-ext==23.3.0
 sanic-jinja2==2022.11.11
 sanic-openapi==21.12.0
 sanic-routing==22.8.0
+sanic-testing==23.3.0
 six==1.16.0
+sniffio==1.3.0
 SQLAlchemy==2.0.8
 text-unidecode==1.3
 tracerite==1.1.0
