--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ aiofiles==23.1.0
 aiosmtplib==2.0.1
 alembic==1.10.2
 anyio==3.6.2
+async-generator==1.10
+attrs==23.1.0
 bcrypt==4.0.1
 certifi==2022.12.7
 cloudinary==1.32.0
@@ -20,7 +22,9 @@ iniconfig==2.0.0
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
+mock==5.0.1
 multidict==6.0.4
+outcome==1.2.0
 packaging==23.1
 passlib==1.7.4
 Pillow==9.5.0
@@ -30,7 +34,9 @@ pyasn1==0.4.8
 pydantic==1.10.7
 PyMySQL==1.0.3
 pytest==7.3.1
+pytest-asyncio==0.21.0
 pytest-mock==3.10.0
+pytest-timeout==2.1.0
 python-decouple==3.8
 python-dotenv==1.0.0
 python-jose==3.3.0
@@ -47,11 +53,13 @@ sanic-routing==22.8.0
 sanic-testing==23.3.0
 six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.8
 text-unidecode==1.3
 tracerite==1.1.0
+trio==0.22.0
 typing_extensions==4.5.0
 ujson==5.7.0
 urllib3==1.26.15
 uvloop==0.17.0
-websockets==11.0
+websockets==10.4
