--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ packaging==23.1
 passlib==1.7.4
 Pillow==9.5.0
 pluggy==1.0.0
-psycopg2==2.9.6
+psycopg2-binary==2.9.6
 pyasn1==0.4.8
 pydantic==1.10.7
 PyMySQL==1.0.3
