--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,6 @@ multidict==6.0.4
 outcome==1.2.0
 packaging==23.1
 passlib==1.7.4
-Pillow==9.5.0
 pluggy==1.0.0
 psycopg2-binary==2.9.6
 pyasn1==0.4.8
@@ -55,6 +54,7 @@ six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 SQLAlchemy==2.0.8
+tenacity==8.2.2
 text-unidecode==1.3
 tracerite==1.1.0
 trio==0.22.0
