--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ async-generator==1.10
 attrs==23.1.0
 bcrypt==4.0.1
 certifi==2022.12.7
+click==8.1.3
 cloudinary==1.32.0
 decouple==0.0.7
 dnspython==2.3.0
@@ -61,5 +62,6 @@ trio==0.22.0
 typing_extensions==4.5.0
 ujson==5.7.0
 urllib3==1.26.15
+uvicorn==0.22.0
 uvloop==0.17.0
 websockets==10.4
