--- a/requirements.txt
+++ b/requirements.txt
@@ -23,12 +23,16 @@ iniconfig==2.0.0
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
+mirakuru==2.5.1
 mock==5.0.1
 multidict==6.0.4
 outcome==1.2.0
 packaging==23.1
 passlib==1.7.4
 pluggy==1.0.0
+port-for==0.7.0
+psutil==5.9.5
+psycopg==3.1.9
 psycopg2-binary==2.9.6
 pyasn1==0.4.8
 pydantic==1.10.7
@@ -36,6 +40,7 @@ PyMySQL==1.0.3
 pytest==7.3.1
 pytest-asyncio==0.21.0
 pytest-mock==3.10.0
+pytest-postgresql==5.0.0
 pytest-timeout==2.1.0
 python-decouple==3.8
 python-dotenv==1.0.0
