--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,10 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - SQLALCHEMY_DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      - SQLALCHEMY_DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
     env_file:
       - .env
+    # command: bash -c "alembic upgrade heads && python initials/initial_data.py && python app/server.py"
     depends_on:
       - db
 
