--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pluggy==1.0.0
 port-for==0.7.0
 psutil==5.9.5
 psycopg==3.1.9
+psycopg-binary==3.1.13
 psycopg2-binary==2.9.6
 pyasn1==0.4.8
 pydantic==1.10.7
